--- a/main.ipynb
+++ b/main.ipynb
@@ -2,25 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "** RAG implementation of Llama2 using pdf **\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"\\n** RAG implementation of Llama2 using pdf **\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,44 +52,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Document(page_content='Arun Raja Manjini  \\narunraja08@gmail.com |  (361) 228 -0045 | Hillsboro, OR  | linkedin.com/in/arunrjm/  \\n \\nOBJECTIVE  \\nAs a n Engineer  my goal is to immerse myself in cutting -edge technologies, methodologies, and tools \\nemployed in  pre-silicon & post -silicon validation, thereby broadening my expertise,  and learning latest \\nvalidation methodologies /tools , and becoming an integral part of a team delivering high -quality  product.  \\n \\nEXPERIENCE  \\nSystem Validation Engineer , Intel Corporation, USA                              Aug 2021 – Present  \\n▪ Contributed to the test plans to functionally validate Intel Scalable coherent fabric’s features routing \\nand cache coherency in LLC and other IO devices.  \\n▪ Collaborated with the IP design Architecture / SoC  Emulation teams to review and debug of functional \\nscenarios to functional/ performance validation.  \\n▪ Implemented/ develop ed Python scripts for debug script and individual test cases, integrating them into \\nan automated testing framework.  \\n▪ Worked on power -on new silicon and from power -on exit to longer regression owning features through \\ndifferent phases of the product.  \\n▪ Triage and bucketing failures from long regression using automation tools and help in documentation \\nof failures and triage of failures to RTL/firmware /environment bugs.  \\n▪ Used Breker, Portable Stimulus  Standard  tool to implement new function test cases and validation \\nefforts for faster triage of the failures on bare metal and emulation environment.  \\n▪ Mentoring interns and new grads  in my team to help with the initial  phases of the job role and aiding \\nthem with best know n process . \\n \\nAssistant System Engineer , Tata Consultancy Services Ltd, India               Sep 2018 – Aug 2019  \\n▪ Engineer who assisted my team to develop and test python scripts to detect configuration changes in \\nthe device (cisco switch/router) and automated the steps associated it for periodic monitoring . \\n▪ Gained knowledge in python regular expression & file handling, networking tools, pre & post install \\nchecks.  \\n▪ Tools and Tech: Networking, Putty, SQL, Agile development methods.   \\n \\nSKILLS  \\nComputer Architecture , Python , Linux , GitHub , Functional validation , Cache Coherency Debugging , RTL, \\nVerilog , Scripting , Tracing, Power -On, Failure Analysis , x86  and new debug methodologies.    \\n \\nEDUCATION  \\nM.S. in Electrical Engineering                             Texas A&M University, TX, US       2019  - 2021           GPA: 3.9/4   \\nB.Tech. in Electronics & Communication         Pondicherry University, India        2014  - 2018           GPA: 3.5/4   \\n \\nACADEMIC PROJECTS  \\nSynchronous FIFO  RTL coding             \\n▪ Designed an 8x16 entry synchronous First In  First Out buffer for data transfers . \\n▪ Implemented logic to design a memory with write,  read, empty and full conditions.   \\n▪ Used Verilog HDL (RTL development) to establish the FIFO behaviour . \\n \\nCache c oherency problem – Computer Architecture  \\n▪ Submitted a report on overcoming the cache coherency problem raised in the multicore processor due \\nto sharing of writable data .  \\n▪ Understood how MESI protocol i s used to avoid cache coherency.   \\n \\nVISA: I am currently on H1B visa with form I -140 approved.', metadata={'source': 'Arun_Resume.pdf', 'page': 0})]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain_community.document_loaders import PyPDFLoader\n",
     "\n",
-    "loader = PyPDFLoader(\"Arun_Resume.pdf\")\n",
+    "loader = PyPDFLoader(\"Arun_Resume.pdf\") # I used my Resume, change the pdfs to your need\n",
     "pages = loader.load_and_split()\n",
     "#pages\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nAnswer the question based on the context below. If you can\\'t \\nanswer the question, reply \"I don\\'t know\".\\n\\nContext: Here is some context\\n\\nQuestion: Here is a question\\n'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain.prompts import PromptTemplate\n",
     "\n",
@@ -117,23 +86,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'title': 'PromptInput',\n",
-       " 'type': 'object',\n",
-       " 'properties': {'context': {'title': 'Context', 'type': 'string'},\n",
-       "  'question': {'title': 'Question', 'type': 'string'}}}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "chain = prompt| model | parser  \n",
     "chain.input_schema.schema()"
@@ -141,20 +96,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Of course! Based on the context you provided, the answer to the question \"What\\'s my name?\" is \"Aaron.\"'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "chain.invoke(\n",
     " {\n",
@@ -165,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,20 +119,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Document(page_content='Arun Raja Manjini  \\narunraja08@gmail.com |  (361) 228 -0045 | Hillsboro, OR  | linkedin.com/in/arunrjm/  \\n \\nOBJECTIVE  \\nAs a n Engineer  my goal is to immerse myself in cutting -edge technologies, methodologies, and tools \\nemployed in  pre-silicon & post -silicon validation, thereby broadening my expertise,  and learning latest \\nvalidation methodologies /tools , and becoming an integral part of a team delivering high -quality  product.  \\n \\nEXPERIENCE  \\nSystem Validation Engineer , Intel Corporation, USA                              Aug 2021 – Present  \\n▪ Contributed to the test plans to functionally validate Intel Scalable coherent fabric’s features routing \\nand cache coherency in LLC and other IO devices.  \\n▪ Collaborated with the IP design Architecture / SoC  Emulation teams to review and debug of functional \\nscenarios to functional/ performance validation.  \\n▪ Implemented/ develop ed Python scripts for debug script and individual test cases, integrating them into \\nan automated testing framework.  \\n▪ Worked on power -on new silicon and from power -on exit to longer regression owning features through \\ndifferent phases of the product.  \\n▪ Triage and bucketing failures from long regression using automation tools and help in documentation \\nof failures and triage of failures to RTL/firmware /environment bugs.  \\n▪ Used Breker, Portable Stimulus  Standard  tool to implement new function test cases and validation \\nefforts for faster triage of the failures on bare metal and emulation environment.  \\n▪ Mentoring interns and new grads  in my team to help with the initial  phases of the job role and aiding \\nthem with best know n process . \\n \\nAssistant System Engineer , Tata Consultancy Services Ltd, India               Sep 2018 – Aug 2019  \\n▪ Engineer who assisted my team to develop and test python scripts to detect configuration changes in \\nthe device (cisco switch/router) and automated the steps associated it for periodic monitoring . \\n▪ Gained knowledge in python regular expression & file handling, networking tools, pre & post install \\nchecks.  \\n▪ Tools and Tech: Networking, Putty, SQL, Agile development methods.   \\n \\nSKILLS  \\nComputer Architecture , Python , Linux , GitHub , Functional validation , Cache Coherency Debugging , RTL, \\nVerilog , Scripting , Tracing, Power -On, Failure Analysis , x86  and new debug methodologies.    \\n \\nEDUCATION  \\nM.S. in Electrical Engineering                             Texas A&M University, TX, US       2019  - 2021           GPA: 3.9/4   \\nB.Tech. in Electronics & Communication         Pondicherry University, India        2014  - 2018           GPA: 3.5/4   \\n \\nACADEMIC PROJECTS  \\nSynchronous FIFO  RTL coding             \\n▪ Designed an 8x16 entry synchronous First In  First Out buffer for data transfers . \\n▪ Implemented logic to design a memory with write,  read, empty and full conditions.   \\n▪ Used Verilog HDL (RTL development) to establish the FIFO behaviour . \\n \\nCache c oherency problem – Computer Architecture  \\n▪ Submitted a report on overcoming the cache coherency problem raised in the multicore processor due \\nto sharing of writable data .  \\n▪ Understood how MESI protocol i s used to avoid cache coherency.   \\n \\nVISA: I am currently on H1B visa with form I -140 approved.', metadata={'source': 'Arun_Resume.pdf', 'page': 0})]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "retriever = vectorstore.as_retriever()\n",
     "retriever.invoke(\"Cache\")"
@@ -196,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,19 +148,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Question: where did he study?\n",
-      "Answer: The answer to your question can be found in the resume of Arun Raja Manjini. According to his resume, he studied at Texas A&M University in the United States for his Master's degree in Electrical Engineering, and at Pondicherry University in India for his Bachelor's degree in Electronics & Communication.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "questions = [\n",
     "    \"where did he study?\",\n",
@@ -242,20 +165,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Based on the provided resume, Arun Raja Manjini studied at Texas A&M University in the United States for his Master of Science degree in Electrical Engineering, and at Pondicherry University in India for his Bachelor of Technology degree in Electronics & Communication.']"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "chain.batch([{\"question\": q} for q in questions])"
    ]
